# feelingengine

./: .dockerignore  .env.example  .gitignore  CAPABILITIES.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
deploy/: README.md  brain_regions.py  tribe_modal.py
docs/: detector_validation.md  mechanism_labels.md  methodology.md
examples/: analyze_speech.py  walkthrough.md
examples/arcs/: README.md  corporate_playbook_90_day_trap.json  iceberger_bloods_rank.json  pastmorph_evolution_of_homes.json  steve_jobs_death_pivot.json
examples/colab/: feeling_engine_demo.ipynb
examples/inspector/: README.md  app.js  index.html  style.css
feeling_engine/: __init__.py  _gemini_retry.py  pipeline.py  voice_picker.py
feeling_engine/adapters/: __init__.py
feeling_engine/adapters/brain_model/: base.py  tribev2.py
feeling_engine/adapters/compute/: base.py  modal_tribe.py
feeling_engine/adapters/tts/: base.py  elevenlabs.py
feeling_engine/fire/: matcher.py
feeling_engine/mechanisms/: __init__.py  api.py  llm_detector.py  prompts.py  sequences.py  tier1_detectors.py  tier2_detectors.py  vocabulary.py
feeling_engine/mining/: __init__.py  arc_miner.py
feeling_engine/preprocess/: __init__.py  clip_trimmer.py  multimodal.py
feeling_engine/qa/: __init__.py  apply_amendments.py  context_qa.py
feeling_engine/rendering/: __init__.py  analysis_assets.py  brain_renderer.py  platform_export.py  signatures.py
feeling_engine/translator/: __init__.py  brain_to_emotion.py  change_detector.py  confidence.py  llm_synthesizer.py  vocabulary.yaml
tests/: README.md  conftest.py
tests/e2e/: test_brain_render_smoke.py  test_gemini_video_smoke.py  test_live_pipeline.py  test_modal_audio_smoke.py
tests/e2e/fixtures/: jobs_death_pivot.txt  jobs_short.txt
tests/integration/: test_bundle_load.py  test_colab_cells.py  test_inspector_assets.py
tests/unit/: test_analysis_assets.py  test_brain_renderer.py  test_change_detector.py  test_fire_matcher.py  test_gemini_retry.py  test_llm_detector.py  test_multimodal_preprocess.py  test_pipeline.py  test_platform_export.py  test_tier1_detectors.py  test_vocabulary.py
(+2 files in other folders)
